deleted fastai and added predict

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-numpy>=1.14
-opencv-python>=3.4
-http://download.pytorch.org/whl/cpu/torch-0.3.1-cp36-cp36m-linux_x86_64.whl
-torchvision==0.2.1
-urllib3>=1.22
+-f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
+torch_nightly
+fastai<=1.0.47
+starlette
+uvicorn
+python-multipart
+aiofiles
+aiohttp
