--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
 torch_nightly
-fastai<=1.0.47
+fastai
 starlette
 uvicorn
 python-multipart
