--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,7 @@
 # For full config options, check the docs:
 #    docs.serverless.com
 
-service: eminem
+service: eminem-fastai-serverless
 
 # You can pin your service to only deploy with a specific Serverless version
 frameworkVersion: ">=1.27.1"
@@ -26,9 +26,6 @@ provider:
   environment:
     BUCKET_NAME: pytorch-serverless-shun
     STATE_DICT_NAME: dogscats_v2_cpu.h5
-    IMAGE_SIZE: 224
-    IMAGE_STATS: ([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])
-    LABELS_PATH: lib/labels.txt
 
   # you can define custom configuration variables here
   variables:
@@ -64,11 +61,9 @@ custom:
     dockerizePip: true
     zip: true
 
-
 #
 # Define API endpoints
 #
-
 functions:
   predict:
     handler: api/predict.py
