finishing slsf-eminem for now

--- a/serverless.yml
+++ b/serverless.yml
@@ -14,7 +14,7 @@ provider:
   runtime: python3.6
   stage: dev
   region: us-west-2
-  profile: shunkakinoki
+  profile: slsf-superuser
   memorySize: 2048
   timeout: 120
   # you can define API keys to generate here
