--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
--f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
-torch_nightly
 fastai
 starlette
 uvicorn
 python-multipart
 aiofiles
 aiohttp
+
+
+#-f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
+#torch_nightly
